# superkupir

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/: deps.py  main.py  quiz_route.py  schemas.py
app/db_connector/: __init__.py  csv_normalize.py  models.py  repositories.py  session.py
app/ml_core/: __init__.py  asr.py  embeddings.py  ranker.py  tss.py
app/planner/: __init__.py  constraints.py  graph_builder.py  route_optimizer.py
app/quiz_route/: __init__.py  coordinates.py  engine.py  errors.py  http_models.py  orchestrator.py  place_candidate.py  repository.py
app/schemas/: __init__.py  quiz_route.py
app/schemas_add/: __init__.py  quiz_route.py
app/services/: __init__.py  backend_callback.py  backend_exporter.py  base_recommender.py  dialog_manager.py  itinerary.py  parser.py  place_researcher.py  promting.py  quiz_route_generator.py  recsys.py  scrapping.py  scrapping_alt.py  search.py  similar_places.py  transcription.py
back/: .env.example  backend_db_structure.md  changes_backend.md  memory_backend.md  package-lock.json  package.json  readme.md  tsconfig.json
back/prisma/: schema.prisma
back/sql/: create_auth_tables.sql  create_place_interactions_tables.sql  (+2 more)
back/src/: app.ts  (+1 more)
front/: .env  changes_frontend.md  index.html  memory_frontend.md  package-lock.json  package.json  readme.md  run.sh  vite.config.ts
mobile/: readme.md
scripts/: etls_pipline.py  make_tree.ps1  make_tree_run.bat  run_public_api.ps1  run_recsys.py
tests/: test_quiz_route_api.py  test_quiz_route_engine.py
(+178 files in other folders)
